# libsdca

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  readme.txt
cmake/: FindMKL.cmake  FindMatlab.cmake  SelectBLAS.cmake  UseBLAS.cmake
cmake/Modules/: FindMatlab.cmake
include/sdca/: prox.h  solver.h  types.h
include/sdca/math/: blas.h  functor.h  lambert.h  log_exp.h  log_sum_exp.h
include/sdca/prox/: entropy.h  entropy_norm.h  knapsack_eq.h  knapsack_le.h  knapsack_le_biased.h  prox.h  proxdef.h  topk_cone.h  topk_cone_biased.h  topk_entropy.h  topk_entropy_biased.h  topk_simplex.h  topk_simplex_biased.h  two_entropy.h  two_simplex.h  two_simplex_sort.h
include/sdca/solver/: base_solver.h  context.h  data.h  dataset.h  dual_solver.h  eval.h  eval_strategy.h  eval_type.h  input.h  multiset_solver.h  objective.h  output.h  primal_solver.h  reporting.h  scratch.h  solverdef.h  stopping.h  stopping_criteria.h  update.h
include/sdca/solver/data/: dataset.h  input.h  output.h  scratch.h
include/sdca/solver/eval/: begin.h  core.h  dual.h  end.h  primal.h  regularizer.h  scores.h  types.h
include/sdca/solver/objective/: base_objective.h  l2_entropy.h  l2_entropy_nn_features.h  l2_entropy_topk.h  l2_hinge_topk.h  l2_multilabel_entropy.h  l2_multilabel_hinge.h  l2_topk_hinge.h  objective_base.h
include/sdca/util/: stopwatch.h
include/sdca/utility/: logging.cpp  logging.h  stopwatch.h  type_name.h  types.h
main/: CMakeLists.txt  main.cc  main.cpp
matlab/: CMakeLists.txt  allaccuracies.m  cvx  demo.m  getdata.m  lambert_fun.m  libsdca  libsdca-release  make.m  mex_util.hpp  mexdebug.m  plot_lambert_w_exp.m  project_knapsack.cpp  project_onto_k_simplex.cc  project_onto_k_simplex.cpp  project_topk_cone.cpp  project_topk_cone_biased.cpp  project_topk_simplex.cpp  project_topk_simplex_biased.cpp  project_topkcone.cpp  project_topkcone_biased.cpp  project_topksimplex.cpp  project_topksimplex_biased.cpp  prox_run_cvx.m  prox_test_data.m  solve_dual_topk_l2.cpp  solve_primal_topk_l2.cpp  testmex.m
matlab/prox-cvx/: prox_cvx.m  prox_cvx_entropy.m  prox_cvx_knapsack_eq.m  prox_cvx_knapsack_le.m  prox_cvx_knapsack_le_biased.m  prox_cvx_topk_cone.m  prox_cvx_topk_cone_biased.m  prox_cvx_topk_entropy.m  prox_cvx_topk_entropy_biased.m  prox_cvx_topk_simplex.m  prox_cvx_topk_simplex_biased.m
projections/: CMakeLists.txt  biasedtopkconeprojector.cpp  biasedtopkconeprojector.hpp  biasedtopksimplexprojector.cpp  biasedtopksimplexprojector.hpp  knapsackprojector.cpp  knapsackprojector.hpp  projector.cc  projector.cpp  projector.hpp  topkconeprojector.cpp  topkconeprojector.hpp  topkprojector.cpp  topkprojector.hpp  topksimplexprojector.cpp  topksimplexprojector.hpp
projectors/: CMakeLists.txt  knapsack_le_biased_projector.cpp  knapsack_le_biased_projector.hpp  knapsack_le_projector.cpp  knapsack_projector.cpp  knapsack_projector.hpp  projectors.hpp  topk_cone_biased_projector.cpp  topk_cone_biased_projector.hpp  topk_cone_projector.cpp  topk_cone_projector.hpp  topk_simplex_biased_projector.cpp  topk_simplex_biased_projector.hpp  topk_simplex_projector.cpp  topk_simplex_projector.hpp
solvers/: CMakeLists.txt  dual_solver.cpp  dual_solver.hpp  dual_solver_helper.cpp  dual_solver_helper.hpp  dual_variables_helper.cpp  dual_variables_helper.hpp  loss_functions.hpp  loss_updater.cpp  loss_updater.hpp  objective_computer.cpp  objective_computer.hpp  primal_solver.cpp  primal_solver.hpp  regularized_loss.cpp  regularized_loss.hpp  regularizers.hpp  solver.cpp  solver.hpp  solvers.hpp
src/: CMakeLists.txt  README.md
src/linalg/: blas.h  linalg.h  numeric.h
src/logging/: logging.h
src/matlab/: mex_gd.cpp  mex_project.cpp  mex_prox.cpp  mex_solve.cpp  mex_util.h  project_knapsack_le.cpp  project_topk_simplex_biased.cpp  readme.txt
src/matlab1/: project_knapsack.cpp  project_knapsack_le_biased.cpp  solve_dual_hinge_topk_l2.cpp  solve_dual_topk_l2.cpp  solve_primal_hinge_topk_l2.cpp
src/play/: main.cpp
src/playground/: CMakeLists.txt  main.cpp
src/projectors/: CMakeLists.txt  knapsack_le_biased_projector.cpp  knapsack_le_projector.hpp  knapsack_projector.hpp  projector.cpp  projector.hpp  topk_cone_biased_projector.cpp  topk_cone_biased_projector.hpp  topk_cone_projector.hpp  topk_simplex_biased_projector.cpp
src/prox/: CMakeLists.txt  entropy.h  knapsack_eq.h  knapsack_le.h  knapsack_le_biased.h  prox.h  proxdef.h  threshold.h  topk_cone.h  topk_cone_biased.h  topk_entropy.h  topk_entropy_biased.h  topk_simplex.h  topk_simplex_biased.h
src/python/: README.md  examples.py  formatting.el  libsdca.pyx  py_prox.h  py_prox.pxd  py_solve.h  py_solve.pxd  py_util.h  setup.py
src/solve/: dual_solver.h  l2_entropy.h  l2_entropy_topk.h  l2_hinge_topk.h  l2_topk_hinge.h  objective_base.h  primal_solver.h  solve.h  solvedef.h  solver.h
src/solvers/: CMakeLists.txt  dual_variables_helper.cpp  primal_solver.cpp  primal_solver.hpp  solver.cpp
src/util/: CMakeLists.txt  blas.h  fmath.h  lambert.h  logging.h  numeric.h  stopwatch.h  util.h
test/: CMakeLists.txt  test_lambert.cpp  test_log_exp.cpp  test_log_sum_exp.cpp  test_main.cpp  test_prox_entropy.cpp  test_prox_entropy_norm.cpp  test_prox_knapsack_eq.cpp  test_prox_knapsack_le.cpp  test_prox_knapsack_le_biased.cpp  test_prox_topk_cone.cpp  test_prox_topk_cone_biased.cpp  test_prox_topk_entropy.cpp  test_prox_topk_entropy_biased.cpp  test_prox_topk_simplex.cpp  test_prox_topk_simplex_biased.cpp  test_util.h
test/prox/: entropy.cpp  entropy_norm.cpp  knapsack_eq.cpp  knapsack_le.cpp  knapsack_le_biased.cpp  lambert.cpp  log_exp.cpp  topk_cone.cpp  topk_cone_biased.cpp  topk_entropy.cpp  topk_entropy_biased.cpp  topk_simplex.cpp  topk_simplex_biased.cpp  two_entropy.cpp  two_simplex.cpp  two_simplex_sort.cpp
test/solver/: context.cpp  dataset.cpp  dual_solver.cpp  objective.cpp  solver.cpp  solver_features.cpp
util/: CMakeLists.txt  common.hpp  math_util.cpp  math_util.hpp
